--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@
 
 html {
   box-sizing: border-box;
-  font-size: 1rem; }
+  font-size: 100%; }
 
 body {
   font-family: "Poppins", sans-serif;
@@ -28,106 +28,106 @@ body {
   position: relative; }
   .hero__heading-super {
     color: var(--gray-big);
-    font-size: 19;
+    font-size: 1.1875rem;
     font-weight: 700;
     letter-spacing: 0.29em;
-    line-height: 24.22px;
+    line-height: 1.51375rem;
     text-transform: uppercase; }
   .hero__heading-main {
     font-weight: bold;
-    font-size: 70px;
-    line-height: 89px;
+    font-size: 4.375rem;
+    line-height: 5.5625rem;
     color: var(--primary-color);
-    width: 600px;
-    margin-right: 30px; }
+    width: 37.5rem;
+    margin-right: 1.875rem; }
   .hero__heading-decoration {
-    margin-top: -16px;
+    margin-top: -1rem;
     position: relative;
-    left: 15px; }
+    left: 0.9375rem; }
 
 .instructors__message {
   display: flex;
   justify-content: center;
   align-items: center; }
   .instructors__message--001 {
-    margin-top: 197px;
-    margin-bottom: 109px;
+    margin-top: 12.3125rem;
+    margin-bottom: 6.8125rem;
     font-weight: 400;
-    padding-right: 80px;
-    padding-left: 80px;
-    font-size: 19px;
-    font-size: 16px;
-    line-height: 31px;
+    padding-right: 5rem;
+    padding-left: 5rem;
+    font-size: 1.1875rem;
+    font-size: 1rem;
+    line-height: 1.9375rem;
     text-transform: capitalize;
     color: var(--tertiary-color); }
 
 .instructors__profile-001--description, .instructors__profile-002--description {
   text-align: center;
-  margin-top: 15.5px; }
+  margin-top: 0.96875rem; }
   .instructors__profile-001--description-name, .instructors__profile-002--description-name {
-    margin-top: 15.5px;
+    margin-top: 0.96875rem;
     font-weight: bold;
-    font-size: 19px;
-    line-height: 28px;
+    font-size: 1.1875rem;
+    line-height: 1.75rem;
     text-transform: capitalize;
     color: var(--secondary-color); }
   .instructors__profile-001--description-tag, .instructors__profile-002--description-tag {
-    margin-top: 7px;
+    margin-top: 0.4375rem;
     font-weight: normal;
-    font-size: 15px;
-    line-height: 22px;
+    font-size: 0.9375rem;
+    line-height: 1.375rem;
     color: var(--gray-small); }
 
 .hero__heading {
   position: relative; }
   .hero__heading [class$="work"] {
-    left: 220px;
-    margin-top: -5px;
+    left: 13.75rem;
+    margin-top: -0.3125rem;
     position: relative; }
   .hero__heading-divider {
     position: absolute;
-    border: 1px solid #989696;
+    border: 0.0625rem solid #989696;
     transform: rotate(90deg);
-    height: 165px;
+    height: 10.3125rem;
     top: 50%;
     left: 80%;
     transform: translate(-50%, -50%); }
 
 .header-nav__btn [type="button"] {
-  padding: 13px 41px;
+  padding: 0.8125rem 2.5625rem;
   border: none;
   color: var(--secondary-color);
   background-color: var(--white-color);
-  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25);
-  border-radius: 28px;
+  box-shadow: 0.0625rem 0.0625rem 0.125rem rgba(0, 0, 0, 0.25);
+  border-radius: 1.75rem;
   font-weight: bold;
-  font-size: 20px;
-  line-height: 30px;
-  margin: 0px 10px; }
+  font-size: 1.25rem;
+  line-height: 1.875rem;
+  margin: 0 0.625rem; }
   .header-nav__btn [type="button"]:hover {
     cursor: pointer;
     background-color: var(--secondary-color);
     color: var(--white-color); }
 
 .hero__heading-btn {
-  margin-top: 69.31px;
+  margin-top: 69.4 0.33188rem;
   background-color: var(--secondary-color);
   border: none;
   color: var(--white-color);
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 13px;
-  border-radius: 50px;
-  font-size: 24px;
+  padding: 0.8125rem;
+  border-radius: 3.125rem;
+  font-size: 1.5rem;
   font-weight: 700;
-  line-height: 30.6px; }
+  line-height: 1.9125rem; }
   .hero__heading-btn:hover {
     cursor: pointer; }
   .hero__heading-btn--search {
-    width: 24px;
-    height: 24px;
-    margin-right: 9px; }
+    width: 1.5rem;
+    height: 1.5rem;
+    margin-right: 0.5625rem; }
     .hero__heading-btn--search img {
       width: 100%;
       height: 100%; }
@@ -135,47 +135,47 @@ body {
 .detail__box1 {
   width: 100%;
   height: 100%;
-  margin-top: 30px; }
+  margin-top: 1.875rem; }
   .detail__box1 img {
     width: 100%; }
   .detail__box1-info {
     width: 82.3858%;
     margin: 0 auto;
-    margin-top: 60px; }
+    margin-top: 3.75rem; }
     .detail__box1-info p {
-      font-size: 25px;
+      font-size: 1.5625rem;
       font-style: normal;
       font-weight: 400;
-      line-height: 45px;
+      line-height: 2.8125rem;
       letter-spacing: 0em;
       text-transform: capitalize;
       color: #000201; }
 
 .header-nav {
   width: 72.3858%;
-  height: 55px;
+  height: 3.4375rem;
   margin: 0 auto;
-  margin-top: 30px;
+  margin-top: 1.875rem;
   display: flex;
   align-items: center;
   justify-content: space-between; }
   .header-nav__title {
     color: var(--secondary-color);
     font-weight: bold;
-    font-size: 24px;
-    line-height: 36px; }
+    font-size: 1.5rem;
+    line-height: 2.25rem; }
   .header-nav__items {
     list-style-type: none;
     display: flex;
     align-items: center;
     justify-content: space-between; }
     .header-nav__items > li {
-      padding: 11px 19px; }
+      padding: 0.6875rem 1.1875rem; }
       .header-nav__items > li > a {
         text-decoration: none;
         color: var(--primary-color);
-        font-size: 20px;
-        line-height: 30px; }
+        font-size: 1.25rem;
+        line-height: 1.875rem; }
 
 .hero {
   width: 72.3858%;
@@ -183,28 +183,28 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 129px; }
+  margin-top: 8.0625rem; }
   .hero__image {
-    width: 572px;
-    height: 417px; }
+    width: 35.75rem;
+    height: 26.0625rem; }
     .hero__image-display {
       width: 100%; }
 
 /* For the instructors section */
 .instructors {
-  margin-top: 159px;
+  margin-top: 9.9375rem;
   width: 100%;
-  height: 548px;
+  height: 34.25rem;
   background-color: var(--white-color);
   display: flex;
   align-items: center; }
   .instructors__profile {
     width: 50%;
-    height: 548px;
+    height: 34.25rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-left: 120px; }
+    margin-left: 7.5rem; }
     .instructors__profile-001 {
       position: relative;
       display: flex;
@@ -214,7 +214,7 @@ body {
       background: var(--white-color);
       padding: 21px 9px 39px;
       box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.44);
-      border-radius: 20px; }
+      border-radius: 1.25rem; }
     .instructors__profile-002 {
       position: relative;
       display: flex;
@@ -224,7 +224,7 @@ body {
       padding: 21px 9px 39px;
       background: var(--white-color);
       box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.44);
-      border-radius: 20px; }
+      border-radius: 1.25rem; }
     .instructors__profile img {
       position: absolute;
       top: 0%;
@@ -233,22 +233,22 @@ body {
   .instructors__message {
     background-color: var(--secondary-color);
     width: 50%;
-    height: 548px;
+    height: 34.25rem;
     position: relative;
     overflow: hidden; }
     .instructors__message-pix1 {
       position: absolute;
-      left: -30px;
-      bottom: -100px;
-      height: 269.55px;
+      left: -1.875rem;
+      bottom: -6.25rem;
+      height: 16.84688rem;
       overflow: hidden; }
       .instructors__message-pix1 img {
         width: 100%; }
     .instructors__message-pix2 {
       position: absolute;
-      right: -120px;
-      bottom: -100px;
-      height: 269.55px;
+      right: -7.5rem;
+      bottom: -6.25rem;
+      height: 16.84688rem;
       transform: rotate(-97.23deg); }
       .instructors__message-pix2 img {
         width: 100%; }
