--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -8,14 +8,11 @@
 
 html {
   box-sizing: border-box;
-  font-size: 1rem;
+  font-size: 100%;
 }
 
 body {
   font-family: "Poppins", sans-serif;
-  // font-weight: normal;
-  // line-height: 1.7;
-  // color: ;
   background-image: url(../images/greek-vase.png);
   background-position: center;
 }
