--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -3,26 +3,26 @@
     position: relative;
     &-super {
       color: var(--gray-big);
-      font-size: 19;
+      font-size: 1.1875rem;
       font-weight: 700;
       letter-spacing: 0.29em;
-      line-height: 24.22px;
+      line-height: 1.51375rem;
       text-transform: uppercase;
     }
 
     &-main {
       font-weight: bold;
-      font-size: 70px;
-      line-height: 89px;
+      font-size: 4.375rem;
+      line-height: 5.5625rem;
       color: var(--primary-color);
-      width: 600px;
-      margin-right: 30px;
+      width: 37.5rem;
+      margin-right: 1.875rem;
     }
 
     &-decoration {
-      margin-top: -16px;
+      margin-top: -1rem;
       position: relative;
-      left: 15px;
+      left: 0.9375rem;
     }
   }
 }
@@ -35,14 +35,14 @@
     justify-content: center;
     align-items: center;
     &--001 {
-      margin-top: 197px;
-      margin-bottom: 109px;
+      margin-top: 12.3125rem;
+      margin-bottom: 6.8125rem;
       font-weight: 400;
-      padding-right: 80px;
-      padding-left: 80px;
-      font-size: 19px;
-      font-size: 16px;
-      line-height: 31px;
+      padding-right: 5rem;
+      padding-left: 5rem;
+      font-size: 1.1875rem;
+      font-size: 1rem;
+      line-height: 1.9375rem;
       text-transform: capitalize;
       color: var(--tertiary-color);
     }
@@ -53,22 +53,22 @@
     &-002 {
       &--description {
         text-align: center;
-        margin-top: 15.5px;
+        margin-top: 0.96875rem;
 
         &-name {
-          margin-top: 15.5px;
+          margin-top: 0.96875rem;
           font-weight: bold;
-          font-size: 19px;
-          line-height: 28px;
+          font-size: 1.1875rem;
+          line-height: 1.75rem;
           text-transform: capitalize;
           color: var(--secondary-color);
         }
 
         &-tag {
-          margin-top: 7px;
+          margin-top: 0.4375rem;
           font-weight: normal;
-          font-size: 15px;
-          line-height: 22px;
+          font-size: 0.9375rem;
+          line-height: 1.375rem;
           color: var(--gray-small);
         }
       }
