--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,16 +1,16 @@
 .header-nav {
   &__btn {
     [type="button"] {
-      padding: 13px 41px;
+      padding: 0.8125rem 2.5625rem;
       border: none;
       color: var(--secondary-color);
       background-color: var(--white-color);
-      box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25);
-      border-radius: 28px;
+      box-shadow: 0.0625rem 0.0625rem 0.125rem rgba(0, 0, 0, 0.25);
+      border-radius: 1.75rem;
       font-weight: bold;
-      font-size: 20px;
-      line-height: 30px;
-      margin: 0px 10px;
+      font-size: 1.25rem;
+      line-height: 1.875rem;
+      margin: 0 0.625rem;
 
       &:hover {
         cursor: pointer;
@@ -23,27 +23,27 @@
 
 .hero {
   &__heading-btn {
-    margin-top: 69.31px;
+    margin-top: 69.4.33188rem;
     background-color: var(--secondary-color);
     border: none;
     color: var(--white-color);
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 13px;
-    border-radius: 50px;
-    font-size: 24px;
+    padding: 0.8125rem;
+    border-radius: 3.125rem;
+    font-size: 1.5rem;
     font-weight: 700;
-    line-height: 30.6px;
+    line-height: 1.9125rem;
 
     &:hover {
       cursor: pointer;
     }
 
     &--search {
-      width: 24px;
-      height: 24px;
-      margin-right: 9px;
+      width: 1.5rem;
+      height: 1.5rem;
+      margin-right: 0.5625rem;
 
       img {
         width: 100%;
