--- a/sass/pages/_detail.scss
+++ b/sass/pages/_detail.scss
@@ -2,7 +2,7 @@
   &__box1 {
     width: 100%;
     height: 100%;
-    margin-top: 30px;
+    margin-top: 1.875rem;
     img {
       width: 100%;
     }
@@ -10,13 +10,13 @@
     &-info {
       width: 82.3858%;
       margin: 0 auto;
-      margin-top: 60px;
+      margin-top: 3.75rem;
 
       p {
-        font-size: 25px;
+        font-size: 1.5625rem;
         font-style: normal;
         font-weight: 400;
-        line-height: 45px;
+        line-height: 2.8125rem;
         letter-spacing: 0em;
         text-transform: capitalize;
         color: #000201;
