--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,8 +1,8 @@
 .header-nav {
   width: 72.3858%;
-  height: 55px;
+  height: 3.4375rem;
   margin: 0 auto;
-  margin-top: 30px;
+  margin-top: 1.875rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -10,8 +10,8 @@
   &__title {
     color: var(--secondary-color);
     font-weight: bold;
-    font-size: 24px;
-    line-height: 36px;
+    font-size: 1.5rem;
+    line-height: 2.25rem;
   }
 
   &__items {
@@ -21,13 +21,13 @@
     justify-content: space-between;
 
     & > li {
-      padding: 11px 19px;
+      padding: 0.6875rem 1.1875rem;
 
       & > a {
         text-decoration: none;
         color: var(--primary-color);
-        font-size: 20px;
-        line-height: 30px;
+        font-size: 1.25rem;
+        line-height: 1.875rem;
       }
     }
   }
@@ -39,11 +39,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 129px;
+  margin-top: 8.0625rem;
 
   &__image {
-    width: 572px;
-    height: 417px;
+    width: 35.75rem;
+    height: 26.0625rem;
 
     &-display {
       width: 100%;
@@ -52,33 +52,32 @@
 }
 
 /* For the instructors section */
-
 .instructors {
-  margin-top: 159px;
+  margin-top: 9.9375rem;
   width: 100%;
-  height: 548px;
+  height: 34.25rem;
   background-color: var(--white-color);
   display: flex;
   align-items: center;
 
   &__profile {
     width: 50%;
-    height: 548px;
+    height: 34.25rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-left: 120px;
+    margin-left: 7.5rem;
 
     &-001 {
       position: relative;
       display: flex;
       flex-direction: column;
       align-items: center;
-      margin-right: 107px;
+      margin-right: 6.6875rem;
       background: var(--white-color);
-      padding: 21px 9px 39px;
-      box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.44);
-      border-radius: 20px;
+      padding: 1.3125rem 0.5625rem 2.4375rem;
+      box-shadow: 0.0625rem 0.0625rem 0.125rem rgba(0, 0, 0, 0.44);
+      border-radius: 1.25rem;
     }
 
     &-002 {
@@ -86,11 +85,11 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      margin-right: 95px;
-      padding: 21px 9px 39px;
+      margin-right: 5.9375rem;
+      padding: 1.3125rem 0.5625rem 2.4375rem;
       background: var(--white-color);
-      box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.44);
-      border-radius: 20px;
+      box-shadow: 0.0625rem 0.0625rem 0.125rem rgba(0, 0, 0, 0.44);
+      border-radius: 1.25rem;
     }
 
     img {
@@ -104,15 +103,15 @@
   &__message {
     background-color: var(--secondary-color);
     width: 50%;
-    height: 548px;
+    height: 34.25rem;
     position: relative;
     overflow: hidden;
 
     &-pix1 {
       position: absolute;
-      left: -30px;
-      bottom: -100px;
-      height: 269.55px;
+      left: -1.875rem;
+      bottom: -6.25rem;
+      height: 16.84688rem;
       overflow: hidden;
 
       img {
@@ -121,9 +120,9 @@
     }
     &-pix2 {
       position: absolute;
-      right: -120px;
-      bottom: -100px;
-      height: 269.55px;
+      right: -7.5rem;
+      bottom: -6.25rem;
+      height: 16.84688rem;
       transform: rotate(-97.23deg);
 
       img {
