--- a/sass/pages/_work.scss
+++ b/sass/pages/_work.scss
@@ -3,12 +3,12 @@
 }
 
 .hero {
-  margin-bottom: 100px;
+  margin-bottom: 6.25rem;
   &__heading {
     &-sub {
       font-weight: normal;
-      font-size: 12px;
-      line-height: 28px;
+      font-size: 0.75rem;
+      line-height: 1.75rem;
       text-transform: capitalize;
       color: var(--dark-color);
     }
@@ -21,7 +21,7 @@
   display: grid;
   grid-template-columns: repeat(10, 1fr);
   grid-template-rows: repeat(2, 1fr);
-  grid-gap: 30px;
+  grid-gap: 1.875rem;
 
   a {
     text-decoration: none;
@@ -41,8 +41,8 @@
 
     &-search {
       position: absolute;
-      width: 66.38px;
-      height: 68px;
+      width: 4.14875rem;
+      height: 4.25rem;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
