--- a/css/style.css
+++ b/css/style.css
@@ -210,20 +210,20 @@ body {
       display: flex;
       flex-direction: column;
       align-items: center;
-      margin-right: 107px;
+      margin-right: 6.6875rem;
       background: var(--white-color);
-      padding: 21px 9px 39px;
-      box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.44);
+      padding: 1.3125rem 0.5625rem 2.4375rem;
+      box-shadow: 0.0625rem 0.0625rem 0.125rem rgba(0, 0, 0, 0.44);
       border-radius: 1.25rem; }
     .instructors__profile-002 {
       position: relative;
       display: flex;
       flex-direction: column;
       align-items: center;
-      margin-right: 95px;
-      padding: 21px 9px 39px;
+      margin-right: 5.9375rem;
+      padding: 1.3125rem 0.5625rem 2.4375rem;
       background: var(--white-color);
-      box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.44);
+      box-shadow: 0.0625rem 0.0625rem 0.125rem rgba(0, 0, 0, 0.44);
       border-radius: 1.25rem; }
     .instructors__profile img {
       position: absolute;
@@ -257,11 +257,11 @@ body {
   background-color: var(--white-color); }
 
 .hero {
-  margin-bottom: 100px; }
+  margin-bottom: 6.25rem; }
   .hero__heading-sub {
     font-weight: normal;
-    font-size: 12px;
-    line-height: 28px;
+    font-size: 0.75rem;
+    line-height: 1.75rem;
     text-transform: capitalize;
     color: var(--dark-color); }
 
@@ -271,22 +271,22 @@ body {
   display: grid;
   grid-template-columns: repeat(10, 1fr);
   grid-template-rows: repeat(2, 1fr);
-  grid-gap: 30px; }
+  grid-gap: 1.875rem; }
   .works a {
     text-decoration: none; }
   .works__box1 {
     position: relative;
     grid-column: 1/5;
     grid-row: 1/2;
-    background: #2d1b9c;
-    transition: 0.3s ease; }
+    background-image: url(/images/img-00.png); }
+    .works__box1 [class$="001"] {
+      opacity: 0; }
     .works__box1:hover {
-      background-color: var(--light-blue);
-      opacity: 0.19; }
+      background-image: linear-gradient(to right bottom, rgba(45, 27, 156, 0.7), rgba(45, 27, 156, 0.8)), url(/images/img-00.png); }
     .works__box1-search {
       position: absolute;
-      width: 66.38px;
-      height: 68px;
+      width: 4.14875rem;
+      height: 4.25rem;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%); }
